# cargo-mcp

./: CHANGELOG.md  Cargo.toml  README.md  claude-desktop-config.json  test-mcp.sh  tools_schema.json
src/: main.rs  state.rs  tests.rs  tools.rs
src/tools/: .gitkeep  cargo_add.rs  cargo_bench.rs  cargo_build.rs  cargo_check.rs  cargo_clean.rs  cargo_clippy.rs  cargo_fmt_check.rs  cargo_remove.rs  cargo_run.rs  cargo_test.rs  cargo_update.rs  cargo_utils.rs  set_working_directory.rs
