[package]
name = "cargo-mcp"
version = "0.2.0"
authors = ["Jacob Rothstein <hi@jbr.me>", "Anthropic Claude Sonnet 4"]
edition = "2024"
description = "mcp server for cargo commands"
readme = "README.md"
repository = "https://github.com/jbr/cargo-mcp"
documentation = "https://docs.rs/cargo-mcp"
license = "MIT OR Apache-2.0"
keywords = ["mcp"]
categories = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
fieldwork = "0.4.6"
log = "0.4.27"
mcplease = "0.2.2"
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1.1"

# [patch.crates-io]
# mcplease = { path = "../mcplease" }
